--- a/argocd/application/application.yaml
+++ b/argocd/application/application.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: __project__ # {"$kpt-set":"project"}
+    namespace: __project__-__name__ # {"$kpt-set":"destination-namespace"}
     server: https://kubernetes.default.svc
   project: __project__ # {"$kpt-set":"project"}
   source:
