change project setter name

--- a/argocd/project/project.yaml
+++ b/argocd/project/project.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: __name__ # {"$kpt-set":"name"}
+  name: unknown # {"$kpt-set":"project"}
   annotations:
     argocd.argoproj.io/sync-wave: "-2" # Ensure the namespace is created before the argo project
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: __name__ # {"$kpt-set":"name"}
+  name: unknown # {"$kpt-set":"project"}
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "-1" # Ensure argo project is created before any apps
