ensure application creates namespace

--- a/argocd/application/application.yaml
+++ b/argocd/application/application.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: __project__-__name__ # {"$kpt-set":"destination-namespace"}
+  annotations:
+    argocd.argoproj.io/sync-wave: "-2" # Ensure the namespace is created before the argo project
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
