add auto sync to applications

--- a/argocd/application/application.yaml
+++ b/argocd/application/application.yaml
@@ -21,3 +21,8 @@ spec:
     path: . # {"$kpt-set":"repo-path"}
     repoURL: __repo__ # {"$kpt-set":"repo"}
     targetRevision: HEAD # {"$kpt-set":"target-revision"}
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+
